# ccovhs-example

./: .travis.yml  LICENSE  README.md  ccovhs-example.cabal  codecov-haskell.tix  stack.yaml
.circleci/: config.yml
src/: Ccovhs.hs
src/Ccovhs/: A.hs  B.hs  C.hs  D.hs
test/: test.hs
