cabal-version:       2.0
name:                ccovhs-example
synopsis:            Example package for codecov-haskell
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
category:            Data
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
build-type:          Simple
extra-source-files:  README.md

description:
  Example package for codecov-haskell
  .
  This package contains a library and a test-suite for taking test
  coverage data. See <https://codecov.io/gh/8c6794b6/ccovhs-example
  codecov.io> for the test coverage overview of this package.

library
  hs-source-dirs:      src
  exposed-modules:     Ccovhs
                       Ccovhs.A
                       Ccovhs.B
                       Ccovhs.C
                       Ccovhs.D
  build-depends:       base >= 4 && < 5
  default-language:    Haskell2010

test-suite ccovhs-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base >=4 && < 5
                     , ccovhs-example
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/8c6794b6/ccovhs-example.git